<resources>
    <string name="app_name" translatable="false">Fake Shop</string>
    <string name="products">Products</string>
    <string name="follows">Follows</string>
    <string name="follow">Follow</string>
    <string name="shop">Shop</string>
    <string name="search">Search</string>
    <string name="loader">loader</string>
    <string name="product">product</string>
    <string name="no_data">No Data</string>
    <string name="name_title">Name:</string>
    <string name="price_title">Price:</string>
    <string name="update">update</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="notify">Notify</string>
    <string name="share">Share</string>
    <string name="category_title">Category:</string>
    <string name="rating_title">Rating:</string>
    <string name="count_title">Count:</string>
    <string name="download">Download</string>
    <string name="clear">Clear</string>
    <string name="empty_follows">Follows are empty</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="_1_hour">1 hour</string>
    <string name="_1_day">1 day</string>
    <string name="_7_days">7 days</string>
    <string name="notify_time">Select notify time</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="clear_follows">Clean up favorites?</string>
</resources>